# euler

./: CMakeLists.txt  euler.cpp
include/: projecteuler.h  utils.h
src/: CMakeLists.txt  projecteuler.cpp  registry.cpp  utils.cpp
src/problems/: problem_1.cpp  problem_9.cpp
